--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,9 @@
     "node": "6.2.1"
   },
   "scripts": {
-    "test": "tape test/*.js | tap-spec",
+    "test": "mocha --opts ./test/mocha.opts --compilers js:babel-core/register test/tests.js",
     "build": "webpack --progress --profile --colors",
+    "build:watch": "webpack --progress --profile --colors --watch",
     "open": "cd ../public && xdg-open index.html"
   },
   "author": "danielkermode",
@@ -18,12 +19,14 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
-    "tap-spec": "^4.1.1",
-    "tape": "^4.6.0",
+    "chai": "^3.5.0",
+    "mocha": "^2.5.3",
+    "node-jsdom": "^3.1.5",
+    "react-addons-test-utils": "^15.2.0",
     "webpack": "^1.13.1"
   },
   "dependencies": {
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0"
+    "react": "^15.2.0",
+    "react-dom": "^15.2.0"
   }
 }
