--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "goclean": "cp -r ~/Desktop/code/gocode/src/github.com/danielkermode/criceti/vendor/github.com/danielkermode/criceti/chat/ ~/Desktop/code/gocode/src/github.com/danielkermode/criceti/",
     "goupdate": "cd ~/Desktop/code/gocode/src/github.com/danielkermode/criceti && govendor update github.com/danielkermode/criceti/chat",
     "gotest": "cd ~/Desktop/code/gocode/src/github.com/danielkermode/criceti/vendor/github.com/danielkermode/criceti/chat && go test -v",
-    "gobuild": "npm run goclean && cd ~/Desktop/code/gocode/src/github.com/danielkermode/criceti && git add . && git commit -m 'go build' && git push && npm run goupdate"
+    "gobuild": "npm run goclean && cd ~/Desktop/code/gocode/src/github.com/danielkermode/criceti && git add . && git commit -m 'go build' && git push && cd ~/Desktop/code/gocode/src/github.com/danielkermode/criceti/client && npm run goupdate"
   },
   "author": "danielkermode",
   "license": "MIT",
