--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
     "node": "6.2.1"
   },
   "scripts": {
-    "test": "babel-node test/componentTests.js | tap-spec",
+    "test": "babel-tape-runner test/*.js | tap-spec",
     "build": "webpack --progress --profile --colors",
     "build:watch": "webpack --progress --profile --colors --watch",
     "open": "cd ../public && xdg-open index.html"
@@ -15,19 +15,22 @@
   "author": "danielkermode",
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.10.1",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-tape-runner": "^2.0.1",
     "enzyme": "^2.4.1",
     "react-addons-test-utils": "^15.2.0",
+    "redux-logger": "^2.6.1",
     "tap-spec": "^4.1.1",
     "tape": "^4.6.0",
     "webpack": "^1.13.1"
   },
   "dependencies": {
     "react": "^15.2.0",
-    "react-dom": "^15.2.0"
+    "react-dom": "^15.2.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2"
   }
 }
