--- a/client/package.json
+++ b/client/package.json
@@ -10,17 +10,20 @@
     "test": "babel-tape-runner test/*.js | tap-spec",
     "build": "webpack --progress --profile --colors",
     "build:watch": "webpack --progress --profile --colors --watch",
-    "open": "cd ../public && xdg-open index.html"
+    "open": "cd ../public && xdg-open index.html",
+    "lint": "eslint . -c ./.eslintrc.json"
   },
   "author": "danielkermode",
   "license": "MIT",
   "devDependencies": {
+    "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-tape-runner": "^2.0.1",
     "enzyme": "^2.4.1",
+    "eslint": "^3.0.1",
     "react-addons-test-utils": "^15.2.0",
     "tap-spec": "^4.1.1",
     "tape": "^4.6.0",
@@ -30,6 +33,7 @@
     "react": "^15.2.0",
     "react-dom": "^15.2.0",
     "react-redux": "^4.4.5",
-    "redux": "^3.5.2"
+    "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0"
   }
 }
